src/test/deca/syntax/valid/objet/DeclClass3.deca
class Maclasse {
    float f;
}
{
    Maclasse a = new Maclasse();
    a.f;
}