src/test/deca/syntax/invalid/sansObjet/BadPrintx4.deca
{
    int x = 'Hello';
    println(x);
}